--- a/src/templates/user/user_index.html
+++ b/src/templates/user/user_index.html
@@ -59,8 +59,8 @@
 
           <li class="dropdown"><a href="#"><span>More</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="view_accepted_works#get-started">Send complaints and View reply</a></li>
-          <li><a href="view_rating_and_review#get-started">Send rating and review</a></li>
+              <li><a href="user_complaint#get-started">Send complaints and View reply</a></li>
+          <li><a href="rating_and_review#get-started">Send rating and review</a></li>
 <!--          <li><a href="view_work_details#get-started">View work details</a></li>-->
 <!--              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>-->
 <!--                <ul>-->
