new functions added

--- a/src/templates/builders/add_new_work_details.html
+++ b/src/templates/builders/add_new_work_details.html
@@ -15,6 +15,18 @@
     </tr>
 
     <tr>
+        <th>Category</th>
+        <td>
+            <select name="select">
+                <option>Home</option>
+                <option>Apartments</option>
+                <option>Shop</option>
+                <option>Others</option>
+            </select>
+        </td>
+    </tr>
+
+    <tr>
         <th>Place</th>
         <td><input type="text" name="textfield2" required></td>
     </tr>
