--- a/src/templates/user_register.html
+++ b/src/templates/user_register.html
@@ -10,47 +10,47 @@
     <table class="table tabel-striped table-hover" align="center" border="1">
         <tr>
             <th>First name</th>
-            <th><input type="text" name="textfield"></th>
+            <th><input type="text" name="textfield" required></th>
         </tr>
 
          <tr>
             <th>Last name</th>
-            <th><input type="text" name="textfield2"></th>
+            <th><input type="text" name="textfield2" required></th>
         </tr>
 
          <tr>
             <th>Place</th>
-            <th><input type="text" name="textfield3"></th>
+            <th><input type="text" name="textfield3" required></th>
         </tr>
 
          <tr>
             <th>Post</th>
-            <th><input type="text" name="textfield4"></th>
+            <th><input type="text" name="textfield4" required></th>
         </tr>
 
          <tr>
             <th>Pin</th>
-            <th><input type="text" name="textfield5"></th>
+            <th><input type="text" name="textfield5" required></th>
         </tr>
 
          <tr>
             <th>Email</th>
-            <th><input type="text" name="textfield6"></th>
+            <th><input type="text" name="textfield6" required></th>
         </tr>
 
          <tr>
             <th>Phone</th>
-            <th><input type="text" name="textfield7"></th>
+            <th><input type="text" name="textfield7" required></th>
         </tr>
 
         <tr>
             <th>Username</th>
-            <th><input type="text" name="textfield8"></th>
+            <th><input type="text" name="textfield8" required></th>
         </tr>
 
         <tr>
             <th>Password</th>
-            <th><input type="text" name="textfield9"></th>
+            <th><input type="text" name="textfield9" required></th>
         </tr>
 
          <tr>
