--- a/src/templates/builder_register.html
+++ b/src/templates/builder_register.html
@@ -11,54 +11,54 @@
 
          <tr>
             <th>Name</th>
-            <th><input type="text" name="textfield2"></th>
+            <th><input type="text" name="textfield2" required></th>
         </tr>
 
          <tr>
             <th>Place</th>
-            <th><input type="text" name="textfield3"></th>
+            <th><input type="text" name="textfield3" required></th>
         </tr>
 
          <tr>
             <th>Post</th>
-            <th><input type="text" name="textfield4"></th>
+            <th><input type="text" name="textfield4" required></th>
         </tr>
 
          <tr>
             <th>Pin</th>
-            <th><input type="text" name="textfield5"></th>
+            <th><input type="text" name="textfield5" required></th>
         </tr>
 
          <tr>
             <th>Email</th>
-            <th><input type="text" name="textfield6"></th>
+            <th><input type="text" name="textfield6" required></th>
         </tr>
 
          <tr>
             <th>Phone</th>
-            <th><input type="text" name="textfield7"></th>
+            <th><input type="text" name="textfield7" required></th>
         </tr>
 
 
          <tr>
             <th>Latitude</th>
-            <th><input type="text" name="lati"></th>
+            <th><input type="text" name="lati" required></th>
         </tr>
 
          <tr>
             <th>Longitude</th>
-            <th><input type="text" name="longi"></th>
+            <th><input type="text" name="longi" required></th>
         </tr>
 
 
         <tr>
             <th>Username</th>
-            <th><input type="text" name="textfield8"></th>
+            <th><input type="text" name="textfield8" required></th>
         </tr>
 
         <tr>
             <th>Password</th>
-            <th><input type="text" name="textfield9"></th>
+            <th><input type="text" name="textfield9" required></th>
         </tr>
 
          <tr>
