--- a/src/templates/user/user_index.html
+++ b/src/templates/user/user_index.html
@@ -54,7 +54,7 @@
       <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="view_works#get-started">Send work request</a></li>
+          <li><a href="view_works1#get-started">Send work request</a></li>
           <li><a href="view_work_status#get-started">View request status</a></li>
 
           <li class="dropdown"><a href="#"><span>More</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
